--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -66,7 +66,7 @@ jobs:
         $env:PATH = "$env:GITHUB_WORKSPACE\llvm\bin;$env:PATH"
         $env:PATH = "$env:GITHUB_WORKSPACE\ninja_install;$env:PATH"
         Get-ChildItem env:
-        env:PATH
+        $env:PATH
         cmake -v
 
     - name: Build AdaptiveCpp
